--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,11 @@
+/*Paleta de colores
+Amarillo: #EAC926;
+Azul: #03264C;
+Celeste: #1259c3;
+Gris oscuro: #666;
+Gris claro: #ebebeb;
+Verde: #39b54a;*/
+
 *{
     box-sizing: border-box;
 }
@@ -6,11 +14,12 @@ header{
     background-color: #EAC926;
     width: 100%;
 }
-
+body{
+    font-family: 'Roboto', sans-serif;
+}
 p{
     font-size:12px; 
 }
-
 h3{
     font-size:24px;
 }
@@ -26,17 +35,20 @@ h3{
 }
 .burger-menu{
     width: 60px;
-    background-color: #03264C;
-    
+    background-color: #1259c3;
     border-radius: 5px;
     text-align: center;
     margin-left: 50%;
     font-size: 50px;
-
-    
+  
 }
-
+.footerIcon{
+    color: #1259c3;
+    font-size: 2em;
+    margin-bottom: 10px;
+}
 footer{
+    font-family: 'Roboto', sans-serif;
     text-align: center;
 }
  article{
