styles: make changes to complete 2nd DH-exercise

--- a/views/home.html
+++ b/views/home.html
@@ -17,12 +17,12 @@
 </head>
 <body>
     <header>
-        <img src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+        <img id= "imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
         <section>
-           <input type="search" placeholder="Buscar productos, marcas"><span><i class="fa fa-search"></i></span>
+           <input id="busqueda" type="search" placeholder="Buscar productos, marcas"><span class="look"><i class="fa fa-search"></i></span>
             
         </section>
-        <section><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
+        <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
         <section>
             <nav>
                 <ul>
@@ -88,25 +88,25 @@
             </section>
     </main>
     <footer>
-        <section>
+        <section class="footSection">
             <div class="footerIcon"><i class="fa fa-credit-card"></i></div>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
-        <section>
+        <section class="footSection">
             <div class="footerIcon"><i class="fa fa-gift"></i></div>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
-        <section>
+        <section class="footSection">
             <div class="footerIcon"><i class="fa fa-user-shield"></i></div>
             <h4>Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section>Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
+        <section class="footSection">Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
         
     </footer>
    
