--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,12 +13,29 @@ header{
     font-family: 'Roboto', sans-serif;
     background-color: #EAC926;
     width: 100%;
+    padding-bottom: 10px;
+}
+#busqueda{
+    width: 25%;
+    margin-left: 5%;
+}
+.look{
+    background-color:#ebebeb;
+    margin: 3px;
+}
+#imgCabecera{
+    width: 25%;
+    margin: 5%;
+}
+#enCuotas{
+    margin-left: 10%;
 }
 body{
     font-family: 'Roboto', sans-serif;
 }
 p{
-    font-size:12px; 
+    font-size:12px;
+    color: #666; 
 }
 h3{
     font-size:24px;
@@ -34,12 +51,15 @@ h3{
     font-size:  16px;
 }
 .burger-menu{
-    width: 60px;
+    width: 1.5em;
+    padding:6px;
     background-color: #1259c3;
+    color: white; 
     border-radius: 5px;
     text-align: center;
+    margin-bottom:5px;
     margin-left: 50%;
-    font-size: 50px;
+    font-size: 25px;
   
 }
 .footerIcon{
@@ -48,10 +68,15 @@ h3{
     margin-bottom: 10px;
 }
 footer{
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
+        text-align: center;
 }
  article{
      margin-bottom: 10px;
+ }
+ .footSection{
+    width: 40%;
+    align-items: center;
+    margin-left: 40%;
+    margin-bottom: 20px;
  }
 
