--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,36 +9,71 @@ Verde: #39b54a;*/
 *{
     box-sizing: border-box;
 }
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: #ebebeb;
+    padding:5px;
+}
 header{
     font-family: 'Roboto', sans-serif;
     background-color: #EAC926;
-    width: 100%;
+    width: 100vw;
     padding-bottom: 10px;
 }
 #busqueda{
-    width: 25%;
-    margin-left: 5%;
+    display: flex;
+    align-items: flex-start;
+    width: 25vw;
+    margin-left: 5vw;
 }
 .look{
+    display: inline-block;
     background-color:#ebebeb;
     margin: 3px;
 }
 #imgCabecera{
-    width: 25%;
-    margin: 5%;
+    width: 25vw;
+    margin: 5vw;
 }
 #enCuotas{
-    margin-left: 10%;
+    margin-left: 10vw;
 }
-body{
-    font-family: 'Roboto', sans-serif;
+.burger-menu{
+    display: inline-block;
+    padding:6px;
+    background-color: #1259c3;
+    color: white; 
+    border-radius: 5px;
+    margin-bottom:5px;
+    margin: 0 auto;
+    font-size: 25px;
+  
 }
+main{
+    margin-left: auto; 
+    margin-right: auto;
+    width: 90vw;
+ }
+
+.art{
+width: 90vw;
+text-align: left;
+border-top: 1px solid #ebebeb;
+background-color: white;
+padding: 15px;
+}
+
 p{
     font-size:12px;
     color: #666; 
 }
 h3{
     font-size:24px;
+}
+
+.prodImg{
+    width: 90vw;
+    background-color: white;
 }
 
 .precio{
@@ -50,18 +85,7 @@ h3{
 .descrip{
     font-size:  16px;
 }
-.burger-menu{
-    width: 1.5em;
-    padding:6px;
-    background-color: #1259c3;
-    color: white; 
-    border-radius: 5px;
-    text-align: center;
-    margin-bottom:5px;
-    margin-left: 50%;
-    font-size: 25px;
-  
-}
+
 .footerIcon{
     color: #1259c3;
     font-size: 2em;
@@ -71,12 +95,15 @@ footer{
         text-align: center;
 }
  article{
+     text-align: center;
+     width: 90vw;
      margin-bottom: 10px;
  }
+
  .footSection{
-    width: 40%;
+    width: 40vw;
     align-items: center;
-    margin-left: 40%;
+    margin-left: 40vw;
     margin-bottom: 20px;
  }
 
