--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
     <!-- fuentes de google -->
@@ -12,15 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <!--reset-->
     <link rel="stylesheet" href="https://gist.github.com/DavidWells/18e73022e723037a50d6.js">
-<!--Hoja de estilo local-->
-<link href="\css\styles.css" rel="stylesheet" />
+    <!--Hoja de estilo local-->
+    <link href="\css\styles.css" rel="stylesheet" />
 </head>
 <body>
     <header>
         <img id= "imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
         <section>
            <input id="busqueda" type="search" placeholder="Buscar productos, marcas"><span class="look"><i class="fa fa-search"></i></span>
-            
         </section>
         <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
         <section>
@@ -42,49 +42,76 @@
         </section>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
-            </div>
+         </div>
     </header>
     <main>
         <section>
             <h3>Basado en tu última visita</h3>
-            <article><img src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-            <p class = "precio">$6.770</p>
-            <p class = "descuento"> 40% OFF </p>
-            <p class = "descrip"> <strong>Cafetera Moulinex</strong></p></article>
-            <article><img src=".\images\img-macbook-pro-2019.jpg" alt="MacBook">
-            <p class = "precio">$230.000 </p>
-            <p class = "descuento"> 20% OFF</p> 
-            <p class = "descrip"> <strong>MacBook Pro 2019</strong></p>
-        </article>
-            <article><img src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy">
-            <p class = "precio">$70.500</p>
-            <p class = "descuento">10% OFF</p>
-            <p class = "descrip"></strong>Samsung Galaxy S10<strong></p></article>
-            <article><img src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV">
-            <p class = "precio">$23.200<p/> 
-            <p class = "descuento">5% OFF</p>
-            <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p></article>
-        </section>
-        <section>
             <article>
-                <h3>Ofertas</h3>
-                <img src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-                <p class = "precio">$6.770> </p>
-                <p class = "descuento"> 40% OFF</p> 
-                <p class = "descrip"><strong>Cafetera Moulinex</strong></p></p> 
-                </article>
-                <article><img src=".\images\img-macbook-pro-2019.jpg" alt="MacBook">
+                <div class = "prodImg"><img src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></div>
+                <div class="art"> 
+                <p class = "precio">$6.770</p>
+                <p class = "descuento"> 40vw OFF </p>
+                <p class = "descrip"> <strong>Cafetera Moulinex</strong></p></article>
+                </div> 
+            <article>
+                 <div class = "prodImg"> <img src=".\images\img-macbook-pro-2019.jpg" alt="MacBook"></div>
+                <div class="art">  
                 <p class = "precio">$230.000 </p>
-                <p class = "descuento">20% OFF</p>  
-                <p class = "descrip"><strong>MacBook Pro 2019</strong></p></article>
-                <article><img src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy">
+                <p class = "descuento"> 20vw OFF</p> 
+                <p class = "descrip"> <strong>MacBook Pro 2019</strong></p>
+                </div>
+            </article>
+            <article>
+              <div class = "prodImg"><img src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy"></div> 
+                <div class="art"> 
                 <p class = "precio">$70.500</p>
-                <p class = "descuento">10% OFF</p>
-                <p class = "descrip"> <strong>Samsung Galaxy S10</strong></p></article>
-                <article><img src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV">
+                <p class = "descuento">10vw OFF</p>
+                <p class = "descrip"></strong>Samsung Galaxy S10<strong></p></article>
+                </div>
+            <article>
+                <div class = "prodImg"><img src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV"></div>
+                <div class="art">
+                <p class = "precio">$23.200<p/> 
+                <p class = "descuento">5vw OFF</p>
+                <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p>
+                </div>
+            </article>
+         </section>
+        <section>
+            <h3>Ofertas</h3>
+            <article>
+                <div class = "prodImg"><img src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></div> 
+                <div class="art">
+                <p class = "precio">$6.770> </p>
+                <p class = "descuento"> 40vw OFF</p> 
+                <p class = "descrip"><strong>Cafetera Moulinex</strong></p></p> 
+                </div>
+            </article>
+            <article>
+                 <div class = "prodImg"><img src=".\images\img-macbook-pro-2019.jpg" alt="MacBook"></div>
+                 <div class="art">
+                 <p class = "precio">$230.000 </p>
+                 <p class = "descuento">20vw OFF</p>  
+                 <p class = "descrip"><strong>MacBook Pro 2019</strong></p></article>
+                 </div>
+             <article>
+                <div class = "prodImg"><img src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy"></div>
+                <div class="art">
+                 <p class = "precio">$70.500</p>
+                 <p class = "descuento">10vw OFF</p>
+                 <p class = "descrip"> <strong>Samsung Galaxy S10</strong></p>
+                </div>
+            </article>
+            <article>
+                <div class = "prodImg"><img src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV"></div>
+                <div class="art">
+                <i class="fa fa-truck"></i>
                 <p class = "precio">$23.200</p>
-                <p class = "descuento">5% OFF</p> 
-                <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p></article>
+                <p class = "descuento">5vw OFF</p> 
+                <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p>
+                </div>
+            </article>
             </section>
     </main>
     <footer>
