--- a/views/home.html
+++ b/views/home.html
@@ -19,11 +19,11 @@
 <body>
     <header>
         <img id= "imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
-        <section>
-           <input id="busqueda" type="search" placeholder="Buscar productos, marcas"><span class="look"><i class="fa fa-search"></i></span>
+        <section id="busqueda">
+           <input type="search" placeholder="Buscar productos, marcas"><span id="look"><i class="fa fa-search"></i></span>
         </section>
         <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
-        <section>
+        <section id="navs">
             <nav>
                 <ul>
                     <li>Ofertas</li>
@@ -45,95 +45,102 @@
          </div>
     </header>
     <main>
+        <h3>Basado en tu última visita</h3>
         <section>
-            <h3>Basado en tu última visita</h3>
             <article>
-                <div class = "prodImg"><img src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></div>
-                <div class="art"> 
+                <img class = "prodImg" src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                <div> 
+                <i class="fas fa-truck"></i>    
                 <p class = "precio">$6.770</p>
-                <p class = "descuento"> 40vw OFF </p>
+                <p class = "descuento"> 40% OFF </p>
                 <p class = "descrip"> <strong>Cafetera Moulinex</strong></p></article>
                 </div> 
             <article>
-                 <div class = "prodImg"> <img src=".\images\img-macbook-pro-2019.jpg" alt="MacBook"></div>
-                <div class="art">  
+                 <img class = "prodImg" src=".\images\img-macbook-pro-2019.jpg" alt="MacBook">
+                <div>  
+                <i class="fas fa-truck"></i>
                 <p class = "precio">$230.000 </p>
-                <p class = "descuento"> 20vw OFF</p> 
+                <p class = "descuento"> 20% OFF</p> 
                 <p class = "descrip"> <strong>MacBook Pro 2019</strong></p>
                 </div>
             </article>
             <article>
-              <div class = "prodImg"><img src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy"></div> 
-                <div class="art"> 
+              <img class = "prodImg" src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy">
+                <div>
+                <i class="fas fa-truck"></i> 
                 <p class = "precio">$70.500</p>
-                <p class = "descuento">10vw OFF</p>
-                <p class = "descrip"></strong>Samsung Galaxy S10<strong></p></article>
+                <p class = "descuento">10% OFF</p>
+                <p class = "descrip"><strong>Samsung Galaxy S10</strong></p></article>
                 </div>
             <article>
-                <div class = "prodImg"><img src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV"></div>
-                <div class="art">
+               <img class = "prodImg" src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV">
+                <div>
+                <i class="fas fa-truck"></i>
                 <p class = "precio">$23.200<p/> 
-                <p class = "descuento">5vw OFF</p>
+                <p class = "descuento">5% OFF</p>
                 <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p>
                 </div>
             </article>
          </section>
+         <h3>Ofertas</h3>
         <section>
-            <h3>Ofertas</h3>
             <article>
-                <div class = "prodImg"><img src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></div> 
-                <div class="art">
+                <img class = "prodImg" src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                <div>
+                <i class="fas fa-truck"></i>
                 <p class = "precio">$6.770> </p>
-                <p class = "descuento"> 40vw OFF</p> 
+                <p class = "descuento"> 40% OFF</p> 
                 <p class = "descrip"><strong>Cafetera Moulinex</strong></p></p> 
                 </div>
             </article>
             <article>
-                 <div class = "prodImg"><img src=".\images\img-macbook-pro-2019.jpg" alt="MacBook"></div>
-                 <div class="art">
+                <img class = "prodImg" src=".\images\img-macbook-pro-2019.jpg" alt="MacBook">
+                <div>
+                <i class="fas fa-truck"></i>
                  <p class = "precio">$230.000 </p>
-                 <p class = "descuento">20vw OFF</p>  
+                 <p class = "descuento">20% OFF</p>  
                  <p class = "descrip"><strong>MacBook Pro 2019</strong></p></article>
                  </div>
              <article>
-                <div class = "prodImg"><img src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy"></div>
-                <div class="art">
+                <img class = "prodImg" src=".\images\img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy">
+                <div>
+                 <i class="fas fa-truck"></i>
                  <p class = "precio">$70.500</p>
-                 <p class = "descuento">10vw OFF</p>
+                 <p class = "descuento">10% OFF</p>
                  <p class = "descrip"> <strong>Samsung Galaxy S10</strong></p>
                 </div>
             </article>
             <article>
-                <div class = "prodImg"><img src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV"></div>
-                <div class="art">
+                <img class = "prodImg" src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV">
+                <div>
                 <i class="fa fa-truck"></i>
                 <p class = "precio">$23.200</p>
-                <p class = "descuento">5vw OFF</p> 
+                <p class = "descuento">5% OFF</p> 
                 <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p>
                 </div>
             </article>
             </section>
     </main>
     <footer>
-        <section class="footSection">
+        <section >
             <div class="footerIcon"><i class="fa fa-credit-card"></i></div>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
-        <section class="footSection">
+        <section>
             <div class="footerIcon"><i class="fa fa-gift"></i></div>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
-        <section class="footSection">
+        <section>
             <div class="footerIcon"><i class="fa fa-user-shield"></i></div>
             <h4>Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section class="footSection">Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
+        <section >Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
         
     </footer>
    
