--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,16 @@ header{
     background-color: #EAC926;
     display: block;
     min-width: 360px;
-    padding-bottom: 10px;
+    padding: 25px 10px 10px;
+}
+
+
+
+header #encabezado{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    
 }
 img {
     max-width: 100vw;
@@ -33,20 +42,36 @@ img {
 
 #busqueda{
     display: flex;
-    align-items: flex-start;
-    width: 30vw;
-    margin-left: 5vw;
+    position: inherit;
+    width: 50%;
+    flex-grow: 1;
+    padding: 3px;
 }
+section input{
+    display: flex;
+    width: 100%;
+    border: 0px white solid;
+    border-radius: 5px;
+}
+
 #look{
-    background-color:#ebebeb;
-    margin: 3px;
+    display: flex;
+    color:#ebebeb;
+    background-color:white;
+    position: absolute;
+    right: 6.5%;
+    align-self:center;
+    justify-self: flex-end;
 }
 #imgCabecera{
-    width: 25vw;
-    margin: 5vw;
+    width: 50%;
 }
 #enCuotas{
     text-align: center;
+    display: flex;
+    padding-top: 5vh;
+    width: 100%;
+    flex-grow: 1;
 }
 .burger-menu{
     display: block;
