--- a/views/home.html
+++ b/views/home.html
@@ -18,12 +18,16 @@
 </head>
 <body>
     <header>
-        <img id= "imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
-        <section id="busqueda">
-           <input type="search" placeholder="Buscar productos, marcas"><span id="look"><i class="fa fa-search"></i></span>
-        </section>
-        <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
-        <section id="navs">
+        <div id="encabezado">             
+            <img id= "imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+            <section id= "busqueda" class="form" action="#" method="GET">
+                    <input type="search" placeholder="Buscar productos, marcas y más">
+                    <div id="look" class="submit"><i class="fa fa-search"></i></div>
+                   <!--<input type="search" placeholder="Buscar productos, marcas"><button type="send" id="look"><i class="fa fa-search"></i></button>-->
+            </section>
+            <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
+        </div>
+            <section id="navs">
             <nav>
                 <ul>
                     <li>Ofertas</li>
