--- a/views/home.html
+++ b/views/home.html
@@ -23,7 +23,6 @@
             <section id= "busqueda" class="form" action="#" method="GET">
                     <input type="search" placeholder="Buscar productos, marcas y más">
                     <div id="look" class="submit"><i class="fa fa-search"></i></div>
-                   <!--<input type="search" placeholder="Buscar productos, marcas"><button type="send" id="look"><i class="fa fa-search"></i></button>-->
             </section>
             <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
         </div>
@@ -48,6 +47,7 @@
             <i class="fas fa-bars"></i>
          </div>
     </header>
+    <img class="banner" src="./images/img-home-banner.jpg" alt="Banner de ofertas">
     <main>
         <h3>Basado en tu última visita</h3>
         <section>
