--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,6 +32,7 @@ header #encabezado{
     margin: 10px;
     
 }
+
 img {
     max-width: 100vw;
 }
@@ -69,9 +70,11 @@ section input{
 #enCuotas{
     text-align: center;
     display: flex;
-    padding-top: 5vh;
+    justify-content: center;
+    padding-top: 1rem;
     width: 100%;
     flex-grow: 1;
+    margin: auto;
 }
 .burger-menu{
     display: block;
@@ -192,12 +195,51 @@ footer section {
 
 @media (min-width: 361px){
     #navs{
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
+    #navs nav ul{
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        justify-content: space-between;
+        text-align: center;
+        margin: auto;
+        padding: 0;
+    }
+    #navs nav ul li{
+        padding: 0.5rem;
+    }
+
     .burger-menu{
     display: none; 
     }
     
+    div #encabezado{
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+
+    }
+    #imgCabecera{
+        width: 30%;
+    }
+    #busqueda{
+        width:50px;
+        display: flex;
+        height: 25px;
+        align-self: center;
+    }
+    #enCuotas{
+        text-align: left;
+        justify-items: left;
+        display: flex;
+        width: 30%;
+        margin: auto;
+        justify-self: right;
+        padding:0;
+    }
     main section article {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
         display: flex;
@@ -207,13 +249,24 @@ footer section {
         justify-content: space-between;
         flex-grow: 1;
     }
-    
+
+    #look{
+        display: flex;
+        justify-self: flex-end;
+        position:static;
+        background-color:#ebebeb;
+        color: black;
+        right: 6.5%;
+        align-self:center;
+        justify-self: flex-end;
+        margin: 2px;
+    }
     }
 
 
 @media (min-width: 769px){
     #navs{
-        display: block;
+        display: flex;
     }
     .burger-menu{
     display: none; 
