--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,9 @@
                     <input type="search" placeholder="Buscar productos, marcas y más">
                     <div id="look" class="submit"><i class="fa fa-search"></i></div>
             </section>
-            <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
+            <section id="enCuotas">
+                <span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito
+            </section>
         </div>
             <section id="navs">
             <nav>
@@ -47,7 +49,9 @@
             <i class="fas fa-bars"></i>
          </div>
     </header>
-    <img class="banner" src="./images/img-home-banner.jpg" alt="Banner de ofertas">
+    <div> 
+        <img class="banner" src="./images/img-home-banner.jpg" alt="Banner de ofertas">
+    </div>
     <main>
         <h3>Basado en tu última visita</h3>
         <section>
