feat: add register form

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -38,7 +38,7 @@
             </nav>
             <nav>
                 <ul>
-                    <li><a href="/register.html">Creá tu cuenta <span><i class="far fa-id-card"></i></span></a></li> 
+                    <li><a href="/register">Creá tu cuenta <span><i class="far fa-id-card"></i></span></a></li> 
                     <li>Ingresá <span><i class="fas fa-sign-in-alt"></i></i></span></li> 
                     <li>Mis compras <span><i class="fas fa-shopping-basket"></i></span></li>
                 </ul>
