--- a/src/views/home.html
+++ b/src/views/home.html
@@ -21,10 +21,10 @@
     <header>
         <div id="encabezado">             
             <img id= "imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
-            <section id= "busqueda" class="form" action="#" method="GET">
+            <form id= "busqueda" class="form" action="#" method="GET">
                     <input type="search" placeholder="Buscar productos, marcas y más">
-                    <div id="look" class="submit"><i class="fa fa-search"></i></div>
-            </section>
+                    <button href="#" type="send" id="look"><i class="fa fa-search"></i></button>
+            </form>
             <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de crédito</section>
         </div>
             <section id="navs">
