--- a/src/views/register.html
+++ b/src/views/register.html
@@ -1,65 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
+    <head>
+        <meta charset="UTF-8">
+        <!--viewport-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mercado Liebre</title>
+        <!-- fuentes de google -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+        <!--iconos-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+        <!--reset-->
+        <link rel="stylesheet" href="https://gist.github.com/DavidWells/18e73022e723037a50d6.js">
+        <!--Hojas de estilo locales-->
+        <link href="/css/gral.css" rel="stylesheet" />
+        <link href="/css/register.css" rel="stylesheet" />
+    </head>
 <body>
-    <form action="/datos" method="POST">
-        <section class="datos_basicos">
-            <div>
-                <input type="text" name="nombre_y_apellido" id="nombre_y_apellido" placeholder="Nombre y apellido" minlength="10" required>
-            </div>
-            <div>
-                <input type="text" name="nombre_usuario" id="nombre_usuario" placeholder="Nombre de usuario" minlength="6" required>
-            </div>
-            <div>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-            </div>
-            <div>
-                <label for="fecha_nacimiento"> Fecha de Naciemiento</label>
-            </div>
-            <div>
-                <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" required>
-            </div>
-            <div>
-                <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio">
-            </div>
+    <header>
+        <div id="encabezado">
+            <img id="imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+            <form id="busqueda" class="form" action="#" method="GET">
+                <input type="search" placeholder="Buscar productos, marcas y más">
+                <button href="#" type="send" id="look"><i class="fa fa-search"></i></button>
+            </form>
+            <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de
+                crédito</section>
+        </div>
+        <section id="navs">
+            <nav>
+                <ul>
+                    <li>Ofertas</li>
+                    <li>Tiendas Oficiales</li>
+                    <li>Vender</li>
+                    <li>Ayuda</li>
+                </ul>
+            </nav>
+            <nav>
+                <ul>
+                    <li><a href="/register">Creá tu cuenta <span><i class="far fa-id-card"></i></span></a></li>
+                    <li>Ingresá <span><i class="fas fa-sign-in-alt"></i></i></span></li>
+                    <li>Mis compras <span><i class="fas fa-shopping-basket"></i></span></li>
+                </ul>
+            </nav>
         </section>
-        <section class="perfilUsuario">
-            <div><label for="perfil_usuario">Perfil_usuario</label></div>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
+    <main>
+        <form class="registro" action="/datos" method="POST">
+            <section class="datos_basicos">
+                <div>
+                    <input type="text" name="nombre_y_apellido" id="nombre_y_apellido" placeholder="Nombre y apellido"
+                        minlength="10" required>
+                </div>
+                <div>
+                    <input type="text" name="nombre_usuario" id="nombre_usuario" placeholder="Nombre de usuario"
+                        minlength="6" required>
+                </div>
+                <div>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                </div>
+                <div>
+                    <h3><label for="fecha_nacimiento"> Fecha de Nacimiento</label></h3>
 
-            <div>
-                <input type="radio" name="perfil_usuario" id="perfil_usuario" value="comprador"><span> Comprador</span>
-                <input type="radio" name="perfil_usuario" id="perfil_usuario" value="vender"><span> Vendedor</span>
-            </div>
-        </section>
-        <section class="intereses">
-            <div><label for="intereses">Intereses</label></div>
 
-            <div><input type="checkbox" name="intereses" id="intereses" value="Electro"><span>Electro</span> </div>
-            <div> <input type="checkbox" value="Moda" name="intereses" id="intereses"><span>Moda</span></div>
-            <div><input type="checkbox" value="Hogar" name="intereses" id="intereses"><span>Hogar</span></div>
-            <div><input type="checkbox" value="Jugueteria" name="intereses" id="intereses"><span>Juguetería</span></div>
-            <div><input type="checkbox" value="Vida Sana" name="intereses" id="intereses"><span>Vida Sana</span></div>
+                    <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" required>
+                </div>
+                <div>
+                    <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio">
+                </div>
+            </section>
+            <section class="perfilUsuario">
+                <h3>Perfil del usuario </h3>
+
+                <label for="perfil_usuario">
+                    <input type="radio" name="perfil_usuario" id="perfil_usuario" value="comprador"> Comprador
+                </label>
+                <label for="perfil_usuario">
+                    <input type="radio" name="perfil_usuario" id="perfil_usuario" value="vendedor"> vendedor
+                </label>
+
+            </section>
+            <section class="intereses">
+                <h3><label for="intereses">Intereses</label></h3>
+
+                <div><input type="checkbox" name="intereses" id="intereses" value="Electro"><span>Electro</span> </div>
+                <div> <input type="checkbox" value="Moda" name="intereses" id="intereses"><span>Moda</span></div>
+                <div><input type="checkbox" value="Hogar" name="intereses" id="intereses"><span>Hogar</span></div>
+                <div><input type="checkbox" value="Jugueteria" name="intereses" id="intereses"><span>Juguetería</span>
+                </div>
+                <div><input type="checkbox" value="Vida Sana" name="intereses" id="intereses"><span>Vida Sana</span>
+                </div>
+            </section>
+            <section class="foto">
+                <h3><label for="foto_perfil">Foto de perfil</label></h3>
+                <div><input type="file" name="foto_perfil" id="foto_perfil"></div>
+            </section>
+            <section class="password">
+                <h3><label for="pass">Contraseña</label></h3>
+                <div><input type="password" name="contraseña" id="pass" placeholder="Elegí tu contraseña" minlength="8"
+                        required></div>
+                <div><input type="password" name="confirmar_contraseña" id="confirm_pass"
+                        placeholder="Volvé a ingresar la contraseña que elegiste" required></div>
+            </section>
+
+            <div class="enviar"><button href="/home.html" type="send">Enviar</button></div>
+
+        </form>
+    </main>
+    <footer>
+        <section >
+            <div class="footerIcon"><i class="fa fa-credit-card"></i></div>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
         </section>
-        <section class="foto">
-           <div><label for="foto_perfil">Foto de perfil</label></div> 
-           <div><input type="file" name="foto_perfil" id="foto_perfil"></div>
+        <section>
+            <div class="footerIcon"><i class="fa fa-gift"></i></div>
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
         </section>
-        <section class="password">
-            <div><label for="pass">Contraseña</label></div>
-            <div><input type="password" name="contraseña" id="pass" placeholder="Elegí tu contraseña" minlength="8" required></div>
-            <div><input type="password" name="confirmar_contraseña" id="confirm_pass" placeholder="Volvé a ingresar la contraseña que elegiste" required></div>
+        <section>
+            <div class="footerIcon"><i class="fa fa-user-shield"></i></div>
+            <h4>Seguridad, de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
         </section>
-        <div><button href="/home.html" type="send">Enviar</button></div>
+        <section >Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
+        
+    </footer>
 
 
-    </form>
 </body>
 
 </html>
