--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,9 +1,12 @@
 .registro, .login{
     width: 70%;
     text-align: left;
-    padding-top: 15px;
+    padding-top: 5vh;
     padding-bottom: 10px;
     margin: auto;
+}
+.login{
+    margin-bottom: 20vh;
 }
 
 .registro .datos_basicos input, .password input, .login input{
@@ -44,5 +47,8 @@ button.enviar{
     height: 30px;
     border-radius: 5px;
     text-decoration: none;
+}
+button.enviar:hover{
+    background-color: #0022AA;
 }
 
