fix: add footer color into general styles

--- a/src/views/register.html
+++ b/src/views/register.html
@@ -82,7 +82,7 @@
                     <input type="radio" name="perfil_usuario" id="perfil_usuario" value="comprador"> Comprador
                 </label>
                 <label for="perfil_usuario">
-                    <input type="radio" name="perfil_usuario" id="perfil_usuario" value="vendedor"> vendedor
+                    <input type="radio" name="perfil_usuario" id="perfil_usuario" value="vendedor"> Vendedor
                 </label>
 
             </section>
