--- a/public/css/gral.css
+++ b/public/css/gral.css
@@ -41,6 +41,13 @@ header #encabezado {
 
 }
 
+h4{
+    color:#666;
+}
+p{
+    font-size:12px;
+    color: #666; 
+}
 img {
     max-width: 100vw;
 }
@@ -233,11 +240,10 @@ footer section{
     color: #03264C;
 }
 section#copy{
-    width: 100px;
     text-align: left; 
     width: 100%;
     margin: auto;
-    padding: 0;
+    padding-left: 10px;
 }
 
 }
