fix: change forms action

--- a/src/views/register.html
+++ b/src/views/register.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <main>
-        <form class="registro" action="/datos-registro" method="POST">
+        <form class="registro" action="/" method="GET">
             <section class="datos_basicos">
                 <div>
                     <input type="text" name="nombre_y_apellido" id="nombre_y_apellido" placeholder="Nombre y apellido"
@@ -109,7 +109,7 @@
                         placeholder="Volvé a ingresar la contraseña que elegiste" required></div>
             </section>
 
-            <a  href="/login">
+            <a  href="/">
                 <button class="enviar" type="submit" > Enviar </button>
             </a>
            
