fix: change login form action

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -52,14 +52,14 @@
         </div>
     </header>
     <main>
-        <form class="login" action="/datos-login" method="POST">
-            <div class="login_useer">
+        <form class="login" action="/" method="GET">
+            <div class="login_user">
                 <input type="text" name="nombre_usuario" id="nombre_usuario" placeholder="Nombre de usuario" required>
             </div>
             <div class="login_pass"><input type="password" name="contraseña" id="pass" placeholder="Contraseña"
                     minlength="8" required></div>
 
-            <a href="/login">
+            <a href="/">
                 <button class="enviar" type="submit"> Enviar </button>
             </a>
 
