Revert "fix: heroku problem"
This reverts commit de6fe6222ed06813fd4231141ce668645d679436.

Revierto commit erroneo

--- a/src/views/register.html
+++ b/src/views/register.html
@@ -23,7 +23,7 @@
     <header>
         <div id="encabezado">
             <img id="imgCabecera" src="./images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
-            <form id="busqueda" class="form" action="#" method=" ">
+            <form id="busqueda" class="form" action="#" method="GET">
                 <input type="search" placeholder="Buscar productos, marcas y más">
                 <button href="#" type="send" id="look"><i class="fa fa-search"></i></button>
             </form>
@@ -52,7 +52,7 @@
         </div>
     </header>
     <main>
-        <form class="registro" action="/" method=" ">
+        <form class="registro" action="/" method="GET">
             <section class="datos_basicos">
                 <div>
                     <input type="text" name="nombre_y_apellido" id="nombre_y_apellido" placeholder="Nombre y apellido"
