--- a/src/views/login.html
+++ b/src/views/login.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <main>
-        <form class="login" action="/" method="">
+        <form class="login" action="/" method="GET">
             <div class="login_user">
                 <input type="text" name="nombre_usuario" id="nombre_usuario" placeholder="Nombre de usuario" required>
             </div>
