--- a/src/views/login.html
+++ b/src/views/login.html
@@ -27,25 +27,25 @@
                 <input type="search" placeholder="Buscar productos, marcas y más">
                 <button href="#" type="send" id="look"><i class="fa fa-search"></i></button>
             </form>
-            <section id="enCuotas"><span><i class="fas fa-hand-holding-usd"></i></span>Comprá en cuotas y sin tarjeta de
-                crédito</section>
+            <section id="enCuotas"><i class="fas fa-hand-holding-usd"></i><span>Comprá en cuotas y sin tarjeta de
+                    crédito</span></section>
         </div>
         <section id="navs">
-            <nav>
-                <ul>
-                    <li>Ofertas</li>
-                    <li>Tiendas Oficiales</li>
-                    <li>Vender</li>
-                    <li>Ayuda</li>
-                </ul>
-            </nav>
-            <nav>
-                <ul>
-                    <li><a href="/register">Creá tu cuenta <span><i class="far fa-id-card"></i></span></a></li>
-                    <li><a href="/login">Ingresá <span><i class="fas fa-sign-in-alt"></i></span></a></li>
-                    <li>Mis compras <span><i class="fas fa-shopping-basket"></i></span></li>
-                </ul>
-            </nav>
+
+            <ul class="nav_izq">
+                <li>Ofertas</li>
+                <li>Tiendas Oficiales</li>
+                <li>Vender</li>
+                <li>Ayuda</li>
+            </ul>
+
+
+            <ul class= "nav_der">
+                <li><a href="/register">Creá tu cuenta <span><i class="far fa-id-card"></i></span></a></li>
+                <li><a href="/login">Ingresá <span><i class="fas fa-sign-in-alt"></i></span></a></li>
+                <li><a href="#">Mis compras <span><i class="fas fa-shopping-basket"></i></span></a></li>
+            </ul>
+
         </section>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
