--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,6 +3,7 @@
 h3{
     font-size:24px;
     color: #666;
+    text-align: center;
 }
 
 main{
@@ -15,6 +16,7 @@ main section{
     display: flex;
     flex-wrap: wrap;
     width: 90vw;
+    justify-content: center;
 }
 
 main section article{
@@ -22,7 +24,6 @@ main section article{
     text-align: center;
     width: 90vw;
     margin-bottom: 10px;
-    margin-right: 10px;
     flex-direction: column;
     
 }
