--- a/public/css/register.css
+++ b/public/css/register.css
@@ -3,7 +3,7 @@
     text-align: left;
     padding-top: 5vh;
     padding-bottom: 10px;
-    margin: auto;
+    margin: 0 auto;
 }
 .login{
     margin-bottom: 20vh;
@@ -13,6 +13,7 @@
     padding: 5px;
     margin-bottom: 25px;
     height: 40px;
+    width: 100%;
 }
 .fecha_nacimiento, h3{
     margin-bottom: 15px;
