styles: update home & register footer

--- a/src/views/register.html
+++ b/src/views/register.html
@@ -134,9 +134,11 @@
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section>Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
+
+        <section id="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</section>
 
     </footer>
+
 
 
 </body>
